[gd_scene load_steps=57 format=3]

[ext_resource type="Script" path="res://Scene/Hero/Role_1/hmz_effect/SpecialEffectBullet.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://87rhst7adml7" path="res://Art/HeroPicture/Role1/hmz_Old.png" id="2"]
[ext_resource type="Texture2D" uid="uid://6xwgxwhfeawq" path="res://Art/HeroPicture/Role1/Role1_hmz_2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bwe3koypgn0s5" path="res://Art/HeroPicture/Role1/OldFlush.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dcv1mel7pl0cs" path="res://Art/HeroPicture/Role1/Role1_hmz_pre.png" id="5"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "2" )
region = Rect2(0, 0, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "2" )
region = Rect2(776, 502, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "2" )
region = Rect2(0, 1004, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "2" )
region = Rect2(388, 1004, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "2" )
region = Rect2(388, 0, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "2" )
region = Rect2(776, 0, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "2" )
region = Rect2(1164, 0, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "2" )
region = Rect2(1552, 0, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "2" )
region = Rect2(0, 251, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "2" )
region = Rect2(388, 251, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "2" )
region = Rect2(776, 251, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "2" )
region = Rect2(1164, 251, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "2" )
region = Rect2(1552, 251, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "2" )
region = Rect2(0, 502, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "2" )
region = Rect2(388, 502, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "2" )
region = Rect2(1164, 502, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "2" )
region = Rect2(1552, 502, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "2" )
region = Rect2(0, 753, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "2" )
region = Rect2(388, 753, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "2" )
region = Rect2(776, 753, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "2" )
region = Rect2(1164, 753, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "2" )
region = Rect2(1552, 753, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "2" )
region = Rect2(776, 1004, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "2" )
region = Rect2(1164, 1004, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "2" )
region = Rect2(1552, 1004, 388, 251)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "3" )
region = Rect2(531, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "3" )
region = Rect2(708, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "3" )
region = Rect2(885, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource( "3" )
region = Rect2(177, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource( "3" )
region = Rect2(354, 0, 177, 152)
script = null

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 215, 267)
script = null

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource( "5" )
region = Rect2(430, 0, 215, 267)
script = null

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource( "5" )
region = Rect2(645, 0, 215, 267)
script = null

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource( "5" )
region = Rect2(860, 0, 215, 267)
script = null

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource( "5" )
region = Rect2(215, 0, 215, 267)
script = null

[sub_resource type="SpriteFrames" id="37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}],
"loop": false,
"name": &"hmz_1",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}, {
"duration": 1.0,
"texture": SubResource( "30" )
}, {
"duration": 1.0,
"texture": SubResource( "31" )
}],
"loop": false,
"name": &"hmz_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource( "4" )
}],
"loop": false,
"name": &"hmz_flush",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "33" )
}, {
"duration": 1.0,
"texture": SubResource( "34" )
}, {
"duration": 1.0,
"texture": SubResource( "35" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}],
"loop": false,
"name": &"hmz_pro",
"speed": 15.0
}]
script = null

[sub_resource type="CircleShape2D" id="38"]
radius = 138.004
script = null

[sub_resource type="CircleShape2D" id="39"]
radius = 82.38
script = null

[sub_resource type="Animation" id="40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hit_Box:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "38" )]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hit_Box:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hit_Box:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.5, -10.75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("check_mr/check:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("check_mr/check:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "39" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("check_mr/check:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(102, -90)]
}
script = null

[sub_resource type="Animation" id="41"]
resource_name = "empty"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffectSprited2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffectSprited2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["empty"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hit_Box:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("check_mr/check:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="CircleShape2D" id="42"]
radius = 134.134
script = null

[sub_resource type="Animation" id="43"]
length = 2.77778
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffectSprited2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889, 1, 1.11111, 1.22222, 1.33333, 1.44444, 1.55556, 1.66667, 1.77778, 1.88889, 2, 2.11111, 2.22222, 2.33333, 2.44444, 2.55556, 2.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffectSprited2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hmz_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffectSprited2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hit_Box:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "42" )]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hit_Box:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6, 0.7, 0.9, 1, 1.1, 1.2, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, true, true, true, true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpecialEffectPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hit_Box:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SpecialEffectSprited2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("check_mr/check:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="RectangleShape2D" id="44"]
size = Vector2(149, 124)
script = null

[sub_resource type="Animation" id="45"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffectSprited2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffectSprited2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hmz_2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffectSprited2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.984314, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpecialEffectPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hit_Box:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "44" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hit_Box:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hit_Box:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpecialEffectSprited2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("check_mr/check:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Hit_Box:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
script = null

[sub_resource type="RectangleShape2D" id="46"]
size = Vector2(166, 164)
script = null

[sub_resource type="Animation" id="47"]
length = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffectSprited2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffectSprited2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hmz_flush"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffectSprited2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.92549, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpecialEffectPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hit_Box:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 25)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hit_Box:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "46" )]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hit_Box:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("check_mr/check:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Hit_Box:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
script = null

[sub_resource type="RectangleShape2D" id="48"]
size = Vector2(159, 203.75)
script = null

[sub_resource type="CapsuleShape2D" id="49"]
radius = 59.0
height = 166.0
script = null

[sub_resource type="Animation" id="50"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffectSprited2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffectSprited2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hmz_pro"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffectSprited2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.917647, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hit_Box:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hit_Box:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 7), Vector2(0, 0), Vector2(0, 0), Vector2(0, 7)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hit_Box:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource( "48" ), SubResource( "48" )]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SpecialEffectPlayer:speed_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("check_mr/check:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("check_mr/check:shape")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource( "49" ), SubResource( "49" )]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("check_mr/check:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-56, 78), Vector2(-56, 78), Vector2(-56, 78), Vector2(69, -97), Vector2(69, -97)]
}
script = null

[sub_resource type="AnimationLibrary" id="51"]
_data = {
"RESET": SubResource( "40" ),
"empty": SubResource( "41" ),
"hmz_1": SubResource( "43" ),
"hmz_2": SubResource( "45" ),
"hmz_flush": SubResource( "47" ),
"hmz_pro": SubResource( "50" )
}
script = null

[node name="SpecialEffectBullet" type="Area2D"]
position = Vector2(454, 218)
collision_layer = 2
collision_mask = 0
script = ExtResource( "1" )
metadata/_edit_vertical_guides_ = [402.0]
metadata/_edit_horizontal_guides_ = [132.0]

[node name="SpecialEffectSprited2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0.984314, 1, 1)
sprite_frames = SubResource( "37" )
animation = &"empty"

[node name="SpecialEffectPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "51" )
}

[node name="Hit_Box" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.5, -10.75)
shape = SubResource( "38" )
metadata/_edit_lock_ = true

[node name="check_mr" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="check" type="CollisionShape2D" parent="check_mr"]
position = Vector2(102, -90)
rotation = 1.5708
shape = SubResource( "39" )

[connection signal="area_entered" from="." to="." method="_on_area_entered" flags=18]
[connection signal="area_entered" from="check_mr" to="." method="_on_check_mr_area_entered" flags=18]
